--- a/Ludum Dare 48/Packages/manifest.json
+++ b/Ludum Dare 48/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.h8man.2d.navmeshplus": "https://github.com/codxr02/NavMeshPlus.git",
     "com.unity.2d.animation": "6.0.1",
     "com.unity.2d.pixel-perfect": "5.0.0",
     "com.unity.2d.psdimporter": "5.0.1",
